--- a/proj_duanyou/src/main/res/layout/common_title.xml
+++ b/proj_duanyou/src/main/res/layout/common_title.xml
@@ -56,20 +56,23 @@
 
             <ImageView
                 android:id="@+id/nav_right_iv"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="5dp"
-                android:scaleType="fitXY" />
+                android:padding="5dp"
+                android:scaleType="centerInside"
+                tools:src="@drawable/jubao" />
 
             <TextView
                 android:id="@+id/right_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:paddingVertical="5dp"
                 android:paddingLeft="10dp"
+                android:paddingVertical="5dp"
+                android:textColor="@color/black"
                 android:textSize="16sp"
+
+
                 tools:text="right" />
         </LinearLayout>
 
