--- a/proj_duanyou/src/main/res/layout/activity_people_info.xml
+++ b/proj_duanyou/src/main/res/layout/activity_people_info.xml
@@ -8,105 +8,101 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <ScrollView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        android:layout_marginBottom="55dp"
+        android:orientation="vertical"
+        android:visibility="gone">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="55dp"
-
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="240dp">
 
-                <RelativeLayout
+
+                <ImageView
+                    android:id="@+id/bg_iv"
                     android:layout_width="match_parent"
-                    android:layout_height="240dp">
+                    android:layout_height="190dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/background2x" />
 
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/headimage_iv"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/head42x"
 
-                    <ImageView
-                        android:id="@+id/bg_iv"
-                        android:layout_width="match_parent"
-                        android:layout_height="190dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/background2x" />
+                    app:riv_corner_radius="6dp" />
 
-                    <com.makeramen.roundedimageview.RoundedImageView
-                        android:id="@+id/headimage_iv"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginBottom="20dp"
-                        android:layout_marginLeft="20dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/head42x"
+                <TextView
+                    android:id="@+id/nickname_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/bg_iv"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@+id/headimage_iv"
+                    android:text="我的窝"
+                    android:textColor="@color/white" />
 
-                        app:riv_corner_radius="6dp" />
+                <TextView
+                    android:id="@+id/location_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_below="@+id/nickname_tv"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_toRightOf="@+id/headimage_iv"
+                    android:drawableLeft="@drawable/near2x"
+                    android:gravity="center_vertical"
+                    android:text="火星上"
+                    android:textColor="@color/black" />
 
-                    <TextView
-                        android:id="@+id/nickname_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/bg_iv"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_toRightOf="@+id/headimage_iv"
-                        android:text="我的窝"
-                        android:textColor="@color/white" />
+                <TextView
+                    android:id="@+id/fansnum_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@+id/bg_iv"
+                    android:layout_marginTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:paddingRight="10dp"
+                    android:text="粉丝：1" />
 
-                    <TextView
-                        android:id="@+id/location_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:layout_below="@+id/nickname_tv"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_toRightOf="@+id/headimage_iv"
-                        android:drawableLeft="@drawable/near2x"
-                        android:gravity="center_vertical"
-                        android:text="火星上"
-                        android:textColor="@color/black" />
-
-                    <TextView
-                        android:id="@+id/fansnum_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_below="@+id/bg_iv"
-                        android:layout_marginTop="5dp"
-                        android:paddingBottom="5dp"
-                        android:paddingRight="10dp"
-                        android:text="粉丝：1" />
-
-                    <TextView
-                        android:id="@+id/integral_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/bg_iv"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginBottom="5dp"
-                        android:paddingBottom="5dp"
-                        android:paddingRight="10dp"
-                        android:text="积分：0"
-                        android:textColor="@color/white" />
-
-                </RelativeLayout>
+                <TextView
+                    android:id="@+id/integral_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/bg_iv"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginBottom="5dp"
+                    android:paddingBottom="5dp"
+                    android:paddingRight="10dp"
+                    android:text="积分：0"
+                    android:textColor="@color/white" />
 
             </RelativeLayout>
 
-            <FrameLayout
-                android:id="@+id/framelayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"></FrameLayout>
+        </RelativeLayout>
 
 
-        </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/framelayout"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="50dp"
+        android:layout_height="match_parent"></FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
