--- a/proj_duanyou/src/main/res/values/colors.xml
+++ b/proj_duanyou/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="bg_color">#aaffb200</color>
     <color name="login_color1">#fda85a</color>
     <color name="login_color2">#fee7b5</color>
+    <color name="color_ff6a9b">#ff6a9b</color>
     <color name="black">#000000</color>
     <color name="black2">#99000000</color>
     <color name="gray">#dcd9cf</color>
