--- a/proj_duanyou/src/main/res/layout/activity_register.xml
+++ b/proj_duanyou/src/main/res/layout/activity_register.xml
@@ -18,7 +18,7 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="240dp"
             android:layout_gravity="center_horizontal"
             android:scaleType="centerInside"
             android:src="@drawable/duanyou22x" />
