--- a/proj_duanyou/src/main/res/layout/adapter_interaction.xml
+++ b/proj_duanyou/src/main/res/layout/adapter_interaction.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/gray3"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
+        android:background="@color/white"
         android:paddingHorizontal="10dp"
         android:paddingTop="5dp">
 
@@ -48,9 +50,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:background="@color/white"
         android:orientation="horizontal"
-        android:paddingLeft="15dp">
+        android:paddingBottom="5dp"
+        android:paddingLeft="15dp"
+        android:paddingTop="5dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -78,8 +82,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="10dp"
-        android:paddingTop="5dp">
+        android:layout_margin="10dp"
+        android:background="@drawable/shape_white_5dp_bg"
+
+        >
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/content_iv"
@@ -90,21 +96,38 @@
             android:scaleType="centerCrop"
             app:riv_corner_radius="6dp" />
 
-        <TextView
-            android:id="@+id/replay_name_tv"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/ll_replay"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@+id/content_iv"
+            android:orientation="horizontal"
 
-            tools:text="aaaaaaaa" />
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="回复@" />
+
+            <TextView
+                android:id="@+id/replay_name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Mr肾公子:" />
+
+
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/content_text_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/replay_name_tv"
+            android:layout_below="@+id/ll_replay"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@+id/content_iv"
@@ -118,10 +141,4 @@
     </RelativeLayout>
 
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="5dp"
-        android:background="@color/gray2" />
 </LinearLayout>
