--- a/proj_duanyou/src/main/res/layout/item_comment.xml
+++ b/proj_duanyou/src/main/res/layout/item_comment.xml
@@ -11,7 +11,7 @@
         android:id="@+id/head_iv"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:src="@drawable/default_pic"
         app:riv_corner_radius="6dp" />
 
