--- a/proj_duanyou/src/main/res/layout/activity_upload_duanzi.xml
+++ b/proj_duanyou/src/main/res/layout/activity_upload_duanzi.xml
@@ -38,19 +38,35 @@
             android:orientation="horizontal">
 
             <RelativeLayout
-                android:visibility="invisible"
                 android:id="@+id/pre_show_rl"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:visibility="visible">
 
-                <ImageView
-                    android:id="@+id/pre_show_iv"
+                <RelativeLayout
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginLeft="10dp"
-                    tools:src="@drawable/default_pic" />
+                    android:layout_marginLeft="10dp">
+
+                    <ImageView
+                        android:id="@+id/pre_show_iv"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        tools:src="@drawable/default_pic" />
+
+                    <ImageView
+                        android:id="@+id/iv_play"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_centerInParent="true"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="10dp"
+                        android:visibility="gone"
+                        tools:src="@drawable/start1" />
+                </RelativeLayout>
+
 
                 <ImageView
                     android:id="@+id/delete_iv"
