--- a/proj_duanyou/src/main/res/layout/activity_preview.xml
+++ b/proj_duanyou/src/main/res/layout/activity_preview.xml
@@ -21,14 +21,44 @@
         android:padding="10dp"
         android:src="@drawable/back" />
 
-    <ImageView
-        android:id="@+id/preview_iv"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/complete_ll"
-        android:layout_below="@+id/back_iv"
-        android:scaleType="centerCrop"
-        android:src="@drawable/default_load_long" />
+        android:layout_below="@+id/back_iv">
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <VideoView
+                android:id="@+id/videoView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true" />
+
+
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/preview_iv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop" />
+
+        <ImageView
+            android:id="@+id/play_iv"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/start1" />
+
+    </RelativeLayout>
+
 
     <LinearLayout
         android:id="@+id/complete_ll"
