--- a/proj_duanyou/src/main/res/layout/activity_upload_duanzi.xml
+++ b/proj_duanyou/src/main/res/layout/activity_upload_duanzi.xml
@@ -42,7 +42,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:visibility="visible">
+                android:visibility="invisible">
 
                 <RelativeLayout
                     android:layout_width="80dp"
@@ -57,14 +57,11 @@
                         tools:src="@drawable/default_pic" />
 
                     <ImageView
-                        android:id="@+id/iv_play"
+                        android:id="@+id/play_iv"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_centerInParent="true"
-                        android:layout_marginBottom="5dp"
-                        android:layout_marginLeft="10dp"
-                        android:visibility="gone"
-                        tools:src="@drawable/start1" />
+                        android:src="@drawable/start1" />
                 </RelativeLayout>
 
 
