--- a/proj_duanyou/src/main/res/layout/activity_main.xml
+++ b/proj_duanyou/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="#ffbb3a" />
+        android:background="#e5e5e5" />
 
     <LinearLayout
         android:layout_width="match_parent"
