--- a/proj_duanyou/src/main/res/layout/fragment_mine.xml
+++ b/proj_duanyou/src/main/res/layout/fragment_mine.xml
@@ -49,7 +49,7 @@
             <TextView
                 android:id="@+id/location_tv"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_height="25dp"
                 android:layout_below="@+id/nickname_tv"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
@@ -57,6 +57,7 @@
                 android:drawableLeft="@drawable/smallnear"
                 android:gravity="center_vertical"
                 android:text="火星上"
+                android:textSize="12sp"
                 android:textColor="@color/black" />
 
             <TextView
