--- a/proj_duanyou/src/main/res/layout/activity_duanzi_details.xml
+++ b/proj_duanyou/src/main/res/layout/activity_duanzi_details.xml
@@ -38,6 +38,7 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:src="@drawable/default_pic"
+                        android:scaleType="centerCrop"
                         app:riv_corner_radius="6dp" />
 
                     <TextView
