--- a/proj_duanyou/src/main/res/layout/item_duanyouxiu.xml
+++ b/proj_duanyou/src/main/res/layout/item_duanyouxiu.xml
@@ -45,6 +45,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_margin="10dp"
+                android:scaleType="centerCrop"
                 app:riv_corner_radius="6dp" />
 
             <TextView
